[package]
name = "basset_sei_hub"
version = "1.0.0"
authors = ["<smith@kryptonite.finance>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]
library = []

[dependencies]
cw20 = { version = "0.16.0" }
cw20-base = { version = "0.16.0", features = ["library"] }
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.13.2"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
snafu = { version = "0.7.3" }
rand = "0.5.0"
basset_sei_rewards_dispatcher = {path = "../basset_sei_rewards_dispatcher", features = ["library"] }
basset_sei_token_bsei = {path = "../basset_sei_token_bsei", features = ["library"]}
basset = { path = "../../packages/basset", default-features = false, version = "0.1.0"}
signed_integer = { path = "../../packages/signed_integers", default-features = false, version = "0.1.0"}
basset_sei_validators_registry = {path = "../basset_sei_validators_registry", features = ["library"]}
cosmwasm-bignumber =  { path = "../../packages/bignumber", version = "3.0.0"}

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cosmwasm-vm = "1.0.0"
