[package]
name = "basset_sei_rewards_dispatcher"
version = "0.1.0"
authors = ["<smith@kryptonite.finance>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "1.0.0"

cosmwasm-storage = "1.0.0"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
snafu = { version = "0.7.3" }
basset = { path = "../../packages/basset", default-features = false, version = "0.1.0"}
basset_sei_reward = {path = "../basset_sei_reward", features = ["library"] }
cw-storage-plus = "0.13.2"
cw20 = { version = "0.16.0" }
cw20-base = { version = "0.16.0", features = ["library"] }
sei-cosmwasm = "0.4.10"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
