[package]
name = "basset_sei_validators_registry"
version = "0.1.0"
authors = ["<smith@kryptonite.finance>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-rc.0", features = ["staking"] }
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = { version = "0.13.2" }
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
snafu = { version = "0.7.3" }
basset = { path = "../../packages/basset", default-features = false, version = "0.1.0"}

[dev-dependencies]
cosmwasm-schema = "1.0.0"
